--- a/_light.scss
+++ b/_light.scss
@@ -1,19 +1,20 @@
 /**** Light Color scheme ****/
 
 // Main page background
-$background: #FAFAFA;
+$background-page: #FAFAFA;
 
 // Main text color
 $text: #222222;
 
-// Lighter text color
-$text-lighter: #898989;
+// Alternate text color
+$text-standout: #898989;
 
-// Dark background, for things like sidebar blocks, headers & footers
-$dark-background: #888888;
+// Secondary Background
+// For the background color of things like sidebar blocks, headers & footers
+$background-secondary: #888888;
 
 // Text color for text on top of dark backgrounds
-$text-over-dark-background: #FFFFFF;
+$text-over-background-secondary: #FFFFFF;
 
 // For positive actions, such as submit buttons
 $positive: #4D8F46;
